[gd_scene load_steps=8 format=3 uid="uid://olpy4h4v3w36"]

[ext_resource type="Script" path="res://scenes/game_object/book/book.gd" id="1_bu757"]
[ext_resource type="PackedScene" uid="uid://dsfstepo6lk7x" path="res://scenes/game_object/book/book_sprite.tscn" id="2_iyn5q"]
[ext_resource type="Script" path="res://scenes/component/hurtbox_area.gd" id="5_0k24j"]
[ext_resource type="Script" path="res://scenes/component/hitbox_area.gd" id="6_gwrq3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fh74k"]
size = Vector2(26.163, 30.406)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rek7v"]
size = Vector2(26.163, 30.4056)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iocx5"]
size = Vector2(23.3345, 28.9914)

[node name="Book" type="RigidBody2D" groups=["mobs"]]
collision_layer = 4
collision_mask = 5
gravity_scale = 0.0
lock_rotation = true
script = ExtResource("1_bu757")
knockback_factor = 150.0

[node name="BookSprite" parent="." instance=ExtResource("2_iyn5q")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0.5)
rotation = 0.785398
shape = SubResource("RectangleShape2D_fh74k")

[node name="HealthLabel" type="Label" parent="."]
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
offset_bottom = -17.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="HurtboxArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
monitorable = false
script = ExtResource("5_0k24j")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxArea"]
position = Vector2(-1, 0.500001)
rotation = 0.785397
shape = SubResource("RectangleShape2D_rek7v")

[node name="HitboxArea" type="Area2D" parent="." node_paths=PackedStringArray("attack")]
collision_layer = 2
collision_mask = 0
monitoring = false
script = ExtResource("6_gwrq3")
attack = NodePath("")
damage = 5.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxArea"]
position = Vector2(-1, 0.5)
rotation = 0.785397
shape = SubResource("RectangleShape2D_iocx5")
